src/qt/cbor/libqcborarray.bf

	
	public bool OperatorLesserOrEqual(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorLesserOrEqual(other);
	}
	
	public bool OperatorGreater(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorGreater(other);
	}
	
	public bool OperatorGreaterOrEqual(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorGreaterOrEqual(other);
	}
	
	public bool OperatorEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return this.handle.OperatorEqualWithQCborArrayConstIterator(o);
	}
	
	public bool OperatorNotEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return this.handle.OperatorNotEqualWithQCborArrayConstIterator(o);
	}
	
	public bool OperatorLesserWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorLesserWithOther(other);
	}
	
	public bool OperatorLesserOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorLesserOrEqualWithOther(other);
	}
	
	public bool OperatorGreaterWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorGreaterWithOther(other);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return this.handle.OperatorGreaterOrEqualWithOther(other);
	}
	
	public void* OperatorPlusPlus()
	{
		return this.handle.OperatorPlusPlus();
	}
	
	public void OperatorPlusPlusWithInt(int32 param1)
	{
		this.handle.OperatorPlusPlusWithInt(param1);
	}
	
	public void* OperatorMinusMinus()
	{
		return this.handle.OperatorMinusMinus();
	}
	
	public void OperatorMinusMinusWithInt(int32 param1)
	{
		this.handle.OperatorMinusMinusWithInt(param1);
	}
	
	public void* OperatorPlusAssign(int32 j)
	{
		return this.handle.OperatorPlusAssign(j);
	}
	
	public void* OperatorMinusAssign(int32 j)
	{
		return this.handle.OperatorMinusAssign(j);
	}
	
	public void OperatorPlus(int32 j)
	{
		this.handle.OperatorPlus(j);
	}
	
	public void OperatorMinus(int32 j)
	{
		this.handle.OperatorMinus(j);
	}
	
	public int32 OperatorMinusWithQCborArrayIterator(QCborArray__IteratorPtr j)
	{
		return this.handle.OperatorMinusWithQCborArrayIterator(default);
	}
	
}
extension CQt
{
	[LinkName("QCborArray__Iterator_new")]
	public static extern void* QCborArray__Iterator_new(void* other);
	[LinkName("QCborArray__Iterator_new2")]
	public static extern void* QCborArray__Iterator_new2();
	[LinkName("QCborArray__Iterator_new3")]
	public static extern void* QCborArray__Iterator_new3(void* param1);
	[LinkName("QCborArray__Iterator_OperatorAssign")]
	public static extern void QCborArray__Iterator_OperatorAssign(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorMultiply")]
	public static extern void QCborArray__Iterator_OperatorMultiply(void* c_this);
	[LinkName("QCborArray__Iterator_OperatorMinusGreater")]
	public static extern void* QCborArray__Iterator_OperatorMinusGreater(void* c_this);
	[LinkName("QCborArray__Iterator_OperatorMinusGreater2")]
	public static extern void* QCborArray__Iterator_OperatorMinusGreater2(void* c_this);
	[LinkName("QCborArray__Iterator_OperatorSubscript")]
	public static extern void QCborArray__Iterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QCborArray__Iterator_OperatorEqual")]
	public static extern bool QCborArray__Iterator_OperatorEqual(void* c_this, void* o);
	[LinkName("QCborArray__Iterator_OperatorNotEqual")]
	public static extern bool QCborArray__Iterator_OperatorNotEqual(void* c_this, void* o);
	[LinkName("QCborArray__Iterator_OperatorLesser")]
	public static extern bool QCborArray__Iterator_OperatorLesser(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorLesserOrEqual")]
	public static extern bool QCborArray__Iterator_OperatorLesserOrEqual(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorGreater")]
	public static extern bool QCborArray__Iterator_OperatorGreater(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorGreaterOrEqual")]
	public static extern bool QCborArray__Iterator_OperatorGreaterOrEqual(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorEqualWithQCborArrayConstIterator")]
	public static extern bool QCborArray__Iterator_OperatorEqualWithQCborArrayConstIterator(void* c_this, void* o);
	[LinkName("QCborArray__Iterator_OperatorNotEqualWithQCborArrayConstIterator")]
	public static extern bool QCborArray__Iterator_OperatorNotEqualWithQCborArrayConstIterator(void* c_this, void* o);
	[LinkName("QCborArray__Iterator_OperatorLesserWithOther")]
	public static extern bool QCborArray__Iterator_OperatorLesserWithOther(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QCborArray__Iterator_OperatorLesserOrEqualWithOther(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorGreaterWithOther")]
	public static extern bool QCborArray__Iterator_OperatorGreaterWithOther(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QCborArray__Iterator_OperatorGreaterOrEqualWithOther(void* c_this, void* other);
	[LinkName("QCborArray__Iterator_OperatorPlusPlus")]
	public static extern void* QCborArray__Iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QCborArray__Iterator_OperatorPlusPlusWithInt")]
	public static extern void QCborArray__Iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QCborArray__Iterator_OperatorMinusMinus")]
	public static extern void* QCborArray__Iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QCborArray__Iterator_OperatorMinusMinusWithInt")]
	public static extern void QCborArray__Iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QCborArray__Iterator_OperatorPlusAssign")]
	public static extern void* QCborArray__Iterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QCborArray__Iterator_OperatorMinusAssign")]
	public static extern void* QCborArray__Iterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QCborArray__Iterator_OperatorPlus")]
	public static extern void QCborArray__Iterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QCborArray__Iterator_OperatorMinus")]
	public static extern void QCborArray__Iterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QCborArray__Iterator_OperatorMinusWithQCborArrayIterator")]
	public static extern int32 QCborArray__Iterator_OperatorMinusWithQCborArrayIterator(void* c_this, void j);
	/// Delete this object from C++ memory
	[LinkName("QCborArray__Iterator_Delete")]
	public static extern void QCborArray__Iterator_Delete(void* self);
}
public interface IQCborArray__ConstIterator
{
	void* NativePtr { get; }
}
public struct QCborArray__ConstIteratorPtr : IQCborArray__ConstIterator, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(QCborArray__ConstIteratorPtr other)
	{
		return .(CQt.QCborArray__ConstIterator_new((other == default || other.NativePtr == default) ? default : other.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QCborArray__ConstIterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QCborArray__ConstIteratorPtr other)
	{
		CQt.QCborArray__ConstIterator_OperatorAssign(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public void OperatorMultiply()
	{
		CQt.QCborArray__ConstIterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QCborArray__ConstIterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void OperatorSubscript(int32 j)
	{
		CQt.QCborArray__ConstIterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public bool OperatorEqual(QCborArray__IteratorPtr o)
	{
		return CQt.QCborArray__ConstIterator_OperatorEqual(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorNotEqual(QCborArray__IteratorPtr o)
	{
		return CQt.QCborArray__ConstIterator_OperatorNotEqual(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorLesser(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorLesser(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorLesserOrEqual(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorLesserOrEqual(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreater(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorGreater(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreaterOrEqual(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorGreaterOrEqual(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return CQt.QCborArray__ConstIterator_OperatorEqualWithQCborArrayConstIterator(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorNotEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return CQt.QCborArray__ConstIterator_OperatorNotEqualWithQCborArrayConstIterator(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorLesserWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorLesserWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorLesserOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorLesserOrEqualWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreaterWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorGreaterWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__ConstIterator_OperatorGreaterOrEqualWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public void* OperatorPlusPlus()
	{
		return CQt.QCborArray__ConstIterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public void OperatorPlusPlusWithInt(int32 param1)
	{
		CQt.QCborArray__ConstIterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public void* OperatorMinusMinus()
	{
		return CQt.QCborArray__ConstIterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public void OperatorMinusMinusWithInt(int32 param1)
	{
		CQt.QCborArray__ConstIterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public void* OperatorPlusAssign(int32 j)
	{
		return CQt.QCborArray__ConstIterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public void* OperatorMinusAssign(int32 j)
	{
		return CQt.QCborArray__ConstIterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public void OperatorPlus(int32 j)
	{
		CQt.QCborArray__ConstIterator_OperatorPlus(this.nativePtr, j);
	}
	
	public void OperatorMinus(int32 j)
	{
		CQt.QCborArray__ConstIterator_OperatorMinus(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr j)
	{
		return CQt.QCborArray__ConstIterator_OperatorMinusWithQCborArrayConstIterator(this.nativePtr, default);
	}
	
}
public class QCborArray__ConstIterator
{
	public QCborArray__ConstIteratorPtr handle;
	
	public static implicit operator QCborArray__ConstIteratorPtr(Self self)
	{
		return self.handle;
	}
